[gd_scene load_steps=6 format=3 uid="uid://b5tdt4ga78a8u"]

[ext_resource type="Texture2D" uid="uid://dde1r3ov8ix0f" path="res://assets/PNG/Default size/towerDefense_tile250.png" id="1_8mmo8"]
[ext_resource type="Script" path="res://scenes/Towers/red_bullet_tower.gd" id="1_ajb3i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5prh7"]
size = Vector2(113, 89)

[sub_resource type="CircleShape2D" id="CircleShape2D_vqudl"]
radius = 400.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qodx"]
bg_color = Color(0.678431, 0.00392157, 0, 1)
corner_radius_top_left = 450
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 450

[node name="RedBulletTower" type="StaticBody2D"]
script = ExtResource("1_ajb3i")

[node name="TowerDefenseTile250" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("1_8mmo8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_5prh7")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(62, 0)

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_vqudl")

[node name="BulletContainer" type="Node" parent="."]

[node name="Area" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.345098)
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8qodx")

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
